v1/_sources/examples/calculations/Parse_Angles.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/calculations/Parse_Angles.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_calculations_Parse_Angles.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_calculations_Parse_Angles.py:


Parse angles
============

Demonstrate how to convert direction strings to angles.

The code below shows how to parse directional text into angles.
It also  demonstrates the function's flexibility
in handling various string formatting.

.. GENERATED FROM PYTHON SOURCE LINES 14-16

.. code-block:: default

    import metpy.calc as mpcalc








.. GENERATED FROM PYTHON SOURCE LINES 17-18

Create a test value of a directional text

.. GENERATED FROM PYTHON SOURCE LINES 18-21

.. code-block:: default

    dir_str = 'SOUTH SOUTH EAST'
    print(dir_str)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    SOUTH SOUTH EAST




.. GENERATED FROM PYTHON SOURCE LINES 22-24

Now throw that string into the function to calculate
the corresponding angle

.. GENERATED FROM PYTHON SOURCE LINES 24-27

.. code-block:: default

    angle_deg = mpcalc.parse_angle(dir_str)
    print(angle_deg)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    157.5 degree




.. GENERATED FROM PYTHON SOURCE LINES 28-30

The function can also handle arrays of string
in many different abbrieviations and capitalizations

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default

    dir_str_list = ['ne', 'NE', 'NORTHEAST', 'NORTH_EAST', 'NORTH east']
    angle_deg_list = mpcalc.parse_angle(dir_str_list)
    print(angle_deg_list)




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    (<Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>, <Quantity(45.0, 'degree')>)





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.002 seconds)


.. _sphx_glr_download_examples_calculations_Parse_Angles.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: Parse_Angles.py <Parse_Angles.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: Parse_Angles.ipynb <Parse_Angles.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
